[package]
name="nomos-engine"
version="0.1.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/nomos-engine"
description="CoreNomos transformation daemon and thin CLI"
[dependencies]
core-nomos={git="https://github.com/LiGoldragon/core-nomos.git",rev="cb9705de181b50053b4e634a3b9ad4798103164b"}
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01",default-features=false,features=["macros"]}
name-table={git="https://github.com/LiGoldragon/name-table.git",rev="c3237f77c087e6feab49d6cf34971cebc14a11e6"}
notify="8"
rkyv={version="0.8",features=["bytecheck"]}
signal-nomos={git="https://github.com/LiGoldragon/signal-nomos.git",rev="2c09647bb08825806c1485ba11aca844d4b60fff"}
signal-schema={git="https://github.com/LiGoldragon/signal-schema.git",rev="bc68dc8fa1b16b00156ca36e2690fd77fda91a52"}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="31ab48608a3c2eab0733dcb16a3351251a70789d"}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","sync","time"]}
thiserror="2"
[lints.rust]
unsafe_code="forbid"
