[package]
name="nomos-engine"
version="0.1.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/nomos-engine"
description="CoreNomos transformation daemon and thin CLI"
[dependencies]
core-nomos={git="https://github.com/LiGoldragon/core-nomos.git",rev="f0b6360aecb2a7191bac421ebd40e03e6f21a0ce"}
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01",default-features=false,features=["macros"]}
name-table={git="https://github.com/LiGoldragon/protos.git",rev="7e60f60fbc144265cf5ac1ec238b87744967d4eb"}
notify="8"
rkyv={version="0.8",features=["bytecheck"]}
signal-nomos={git="https://github.com/LiGoldragon/signal-nomos.git",rev="f72d5983fcb2ba3bb7a99140ac812390e59d51ac"}
signal-schema={git="https://github.com/LiGoldragon/signal-schema.git",rev="d8aeae0814b026a8de6bf40e86432cb37d022762"}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="21c3ad78227ec847bda37cfa2494619cdf1b0b70"}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","sync","time"]}
thiserror="2"
[lints.rust]
unsafe_code="forbid"
