[package]
name="nomos-engine"
version="0.2.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/nomos-engine"
description="CoreNomos transformation daemon and thin CLI"
[dependencies]
core-nomos={git="https://github.com/LiGoldragon/core-nomos.git",rev="e4e7ba8cb34452401e18d8b72a3aac69f208f993"}
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01",default-features=false,features=["macros"]}
name-table={git="https://github.com/LiGoldragon/protos.git",rev="f12a80c85d9d27ac4432b86b7d3095e8387c6fa9"}
notify="8"
rkyv={version="0.8",features=["bytecheck"]}
signal-nomos={git="https://github.com/LiGoldragon/signal-nomos.git",rev="7c8972fc9cc25c6a72a6ae31d0aeb92c418659f1"}
signal-schema={git="https://github.com/LiGoldragon/signal-schema.git",rev="0c4b945d942ada0939fef304a155949faad5b607"}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="25ac4fd0abf5d58ab9fce1f10d58220b62bef902"}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","sync","time"]}
thiserror="2"
[lints.rust]
unsafe_code="forbid"
